--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 2.8.0+19
+version: 3.0.4+25
 
 environment:
   sdk: ">=2.16.1 <3.0.0"
@@ -42,7 +42,7 @@ dependencies:
   firebase_core: ^1.13.1
   firebase_messaging: ^11.2.13
   google_maps_flutter: ^2.1.1
-  location: ^4.3.0
+  location: ^4.4.0
   flutter_local_notifications: ^9.4.0
   http: ^0.13.0
   package_info_plus: ^1.4.0
@@ -52,6 +52,7 @@ dependencies:
   otp_text_field: ^1.1.2
   razorpay_flutter: ^1.3.0
   geolocator: ^8.2.0
+  overlay_support: ^1.2.1
   google_api_headers: ^1.3.0
   google_maps_webservice: ^0.0.20-nullsafety.5
   tuple: ^2.0.0
@@ -59,10 +60,12 @@ dependencies:
   provider: ^6.0.1
   flutter_rating_bar: ^4.0.0
   webview_flutter: ^3.0.2
-  url_launcher: ^6.0.20
+  url_launcher: ^6.1.3
   store_redirect: ^2.0.1
   update_available: ^2.0.0
-
+  paytm_allinonesdk: ^1.1.7
+  awesome_notifications: ^0.6.21
+  flutter_phoenix: ^1.0.0
 dev_dependencies:
   flutter_launcher_icons: "^0.9.2"
   flutter_test:
